changes from home. Added java 25, added new code in main, added changes in POM.xml